# todolist_CA

./: README.md  pyproject.toml
tests/: test_todo_items.py
tests/fixtures/: todo_fixtures.py
todo_list/domain/: todo_item.py  todo_repository.py
todo_list/domain/exceptions/: todo_exceptions.py
todo_list/infrastructure/kivy_app/: main.py
todo_list/infrastructure/repositories/: in_memory_todo_repository.py
todo_list/usecases/: todo_usecase.py  usecase.py
