[tool.poetry]
name = "todo-list-ca"
version = "0.1.0"
description = ""
authors = ["rachidWassati <rachid.jeffali@wassati.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
black = "^24.3.0"
pyright = "^1.1.354"
kivy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
